# osa-mailer

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  mail-script.cmd  osa_mailer.cmd  osamailer.cmd
assets/: logo.xcf
docs/: 404.html  CNAME  basic_email.html  common_email_entry  common_email_entry.html  index.html  introduction.html  print.html  roadmap-community-vision.html  searchindex.js  searchindex.json  sending-an-email.html  setup-windows.html  setup.html
entries/: a40a6508.3b0c75841dbaf4.1b21ed28.70a02f02.json  a40a6508.3b119a9187ce4e.dad5b93.8ffe86b0.json  a40a6508.3b119a9f857994.39e01598.f4c659d1.json
mail_producer/: 4c74cfa2.3ad63156262b58.78f1fda2.dc49142b.json  4c74cfa2.3ad63156744518.bb0a5d9a.42fa177a.json  4c74cfa2.3ad63156cfd24c.2dc4da50.ae334433.json  4c74cfa2.3ad631574fb1d0.8d36fc11.bac12721.json  4c74cfa2.3ad633b6f5a2c0.ad2a828b.22950b8.json  4c74cfa2.3ad633b7647854.c4996719.b90631fd.json  4c74cfa2.3ad633b7c2c6cc.6f15f402.9ab3e2bc.json  4c74cfa2.3ad633b81869ae.b7cbefdd.6c7bab1b.json  4c74cfa2.3ad63724a90804.e53611e1.a20ea576.json  4c74cfa2.3ad63724f5066a.d68c6239.c07f90be.json  4c74cfa2.3ad6372542e588.e07371e9.1431d34c.json  4c74cfa2.3ad637259224f0.3f86d797.6b35ca8.json  aaafcabc.1655996327216549600.9c4=.json  demo_client.py  generate_entry_sample.cmd  new_entry.py  new_mail.py  new_mail_sample.py
outbox/: a40a6508.3b0c7585a2ed06.fed5cadb.5a864953.json  a40a6508.3b0c7586049dd2.c8e7d381.3e5f6e98.json  a40a6508.3b119a8fafdc3a.72e3d49e.fc982089.json
relative_path/: Cargo.toml
send_email_request/: demo_client.py  new_email_request.py  (+1 more)
(+43 files in other folders)
