[package]
name = "mail-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
crc = "3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3.2"
