[package]
name = "mail-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relative_path = { path = "relative_path" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
crc = "3"
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3.2"
tera = "1"
handlebars = "4"
liquid = "0.26"
regex = "1"
path-slash = "0.2"
strum = "0.24"
strum_macros = "0.24"
enum-iterator = "1"
lettre = { version = "0.10", default-features = false, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
] }
mime_guess = "2"
lazy_static = "1"
secstr = "0.5"

[profile.release]
panic = 'abort'
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'    # Optimize for size
